# CV_CodingAssignment

./: CMakeLists.txt  README.md
src/: mainstorage.cpp  mainstorage.h
